# CompuCell3D

CompuCell3D/: CMakeLists.txt  GPUEnabled.h
CompuCell3D/DeveloperZone/pyinterface/: FindSWIG.cmake
CompuCell3D/core/: CMakeLists.txt  FindCppUnit.cmake
CompuCell3D/core/BasicUtils/: BasicDynamicClassNode.h  BasicSmartPointer.h
CompuCell3D/core/CompuCell3D/: CMakeLists.txt
CompuCell3D/core/CompuCell3D/Potts3D/: CMakeLists.txt  Potts3D.cpp  Potts3D.h
CompuCell3D/core/CompuCell3D/plugins/CellType/: CellTypePlugin.cpp
CompuCell3D/core/CompuCell3D/plugins/FocalPointPlasticity/: FocalPointPlasticityLinkInventoryBase.h
CompuCell3D/core/CompuCell3D/plugins/MolecularContact/: CMakeLists.txt
CompuCell3D/core/CompuCell3D/plugins/MomentOfInertia/: Makefile
CompuCell3D/core/CompuCell3D/steppables/: CMakeLists.txt
CompuCell3D/core/CompuCell3D/steppables/PDESolvers/: CMakeLists.txt  DiffusionSolverFE.cpp  DiffusionSolverFE.h  FindOpenCL.cmake  PDESolversProxy.cpp  ReactionDiffusionSolverFVM.cpp  ReactionDiffusionSolverFVM.h
CompuCell3D/core/CompuCell3D/steppables/PDESolvers/OpenCL/: ImplicitMatrix.cpp  NonlinearSolver.cpp
CompuCell3D/core/PublicUtilities/: CMakeLists.txt  ParallelUtilsOpenMP.cpp
CompuCell3D/core/cuda/: CMakeLists.txt  finite_difference.cu  finite_difference.h
CompuCell3D/core/finite_difference/: CMakeLists.txt  finite_difference.cu  finite_difference.h  helpers.h
CompuCell3D/core/finite_difference/Logger/: CMakeLists.txt  FDLogger.cpp  FDLogger.h
CompuCell3D/core/muParser/: CMakeLists.txt
CompuCell3D/core/post_install_tasks/: CMakeLists.txt
CompuCell3D/core/post_install_tasks/mac/: compucell3d.command.in
CompuCell3D/core/pyinterface/CompuCellPython/: CMakeLists.txt  CompuCell.i  CompuCellExtraIncludes.i
CompuCell3D/core/pyinterface/PlayerPythonNew/: CMakeLists.txt  FieldWriter.cpp
CompuCell3D/core/pyinterface/SerializerDE/: SerializerDE.cpp
